--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,11 @@ body {
 
 }
 h1 {
-    background-color: rgba(255, 255, 255, 0.516);
+    background-color: rgba(255, 255, 255, 0.32);
 }
 li {
-    background-color: rgba(255, 255, 255, 0.482);
+    background-color: rgba(255, 255, 255, 0.494);
+}
+li {
+font-weight: bolder
 }
